--- a/style.css
+++ b/style.css
@@ -387,3 +387,33 @@ p {
   margin-top: 8px;
   background-color: var(--color-dark-white);
 }
+
+/* Contact */
+
+#contact {
+  background-color: var(--color-purple);
+}
+
+.contact__title,
+.contact__email,
+.contack__rights {
+  color: var(--color-white);
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+.contact__links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+
+.contact__links i {
+  transition: all var(--animation-duration) ease-in;
+}
+
+.contact__links i:hover {
+  transform: scale(1.1);
+  color: var(--color-light-grey);
+}
