--- a/style.css
+++ b/style.css
@@ -124,6 +124,15 @@ p {
   background-color: var(--color-dark-purple);
 }
 
+.navbar__toggle-btn {
+  position: absolute;
+  top: 18px;
+  right: 32px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
+}
+
 /* Home */
 #home {
   background: bottom/cover no-repeat url("imgs/home-background.png");
@@ -181,7 +190,7 @@ p {
   color: var(--color-pink);
   border: 2px solid var(--color-pink);
   border-radius: 50%;
-  margin-bottom: 16px;
+  margin: 0 auto 16px auto;
 }
 
 .major__icon i {
@@ -416,4 +425,40 @@ p {
 .contact__links i:hover {
   transform: scale(1.1);
   color: var(--color-light-grey);
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+  .navbar__toggle-btn {
+    display: block;
+  }
+
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 12px 0;
+  }
+
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .about__majors {
+    flex-direction: column;
+  }
+
+  .major {
+    margin-bottom: 38px;
+  }
+
+  .skillset {
+    flex-direction: column;
+  }
+
+  .project {
+    flex-grow: 1;
+  }
 }
